fix: update style for active enrichment in overlap

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -68,4 +68,11 @@
 .#{$prefix}--active {
   background: unset !important;
   opacity: 100%;
+  z-index: 200;
+}
+
+.#{$prefix}--overlap-highlight {
+  background: unset;
+  border: unset;
+  opacity: 100%;
 }
